fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,8 @@ hr {
 }
 
 #root {
-  width: 100%;  /* Full width */
+  width: 90%;  /* Full width */
+  min-width: 450px;
   max-width: 1000px;  /* Restrict the maximum width */
   margin: 75px auto;  /* Auto margins to center horizontally and set top margin */
 }
@@ -29,11 +30,12 @@ hr {
 
 .note-text {
   flex: 1;
-  margin-right: 1rem;
+  max-width: 75%;
 }
 
 .note-actions button {
   margin-left: 0.5rem;
+  margin-bottom: 0.2rem;
 }
 
 /* Buttons styling */
